--- a/index_gallery.html
+++ b/index_gallery.html
@@ -23,8 +23,8 @@
 <nav class="navbar navbar-expand-lg bg shadow p-3 mb-5 fixed-top"> 
   <div class="container-fluid">
       <a class="navbar-brand" href="#">
-          <img src="Images\QC_logo1.jpg" alt="Logo" width="70" height="40" class="d-inline-block align-text-bottom me-2"> 
-          <span class="text-white cb"><b>QC_MIT</b></span> 
+          <img src="Images\QC_logo1.jpg" alt="Logo" height="34" class="d-inline-block align-text-bottom me-2"> 
+          <span class="text-white cb"><b>Quiz Club of MIT</b></span> 
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
