--- a/index_gallery.html
+++ b/index_gallery.html
@@ -268,19 +268,25 @@ document.getElementById("visionBtn").addEventListener("click", function() {
 
 document.getElementById("teamBtn").addEventListener("click", function() {
     document.getElementById("aboutText").innerHTML = 
-        '<ul class="list-unstyled mb-0">' +
-        "<li><b>Chairperson:</b> Abinaya G (Final Year, Robotics and Automation)</li>" +
-        "<li><b>Vice Chairperson:</b> Albin Joseph Edwards G (Pre-Final Year, Artificial Intelligence and Data Science)</li>" +
-        "<li><b>Treasurer:</b> Sindhuja S (Final Year, Computer Science and Engineering)</li>" +
-        "<li><b>Joint Secretary:</b> Divya Prakash N S (Pre-Final Year, Aeronautical Engineering)</li>" +
-        "<li><b>Curation Head:</b> Subhi K (Final Year, Computer Science and Engineering)</li>" +
-        "<li><b>Curation Head:</b> Pradeesh Vel Nirmal V (Pre-Final Year, Aeronautical Engineering)</li>" +
-        "<li><b>Design Head:</b> Gopika B (Final Year, Automobile Engineering)</li>" +
-        "<li><b>Design Head:</b> Kiruthika A (Final Year, Computer Science and Engineering)</li>" +
-        "<li><b>Media & Marketing Head:</b> Saravanan T S (Final Year, Computer Science and Engineering)</li>" +
-        "<li><b>Media & Marketing Head:</b> Mohana M (Final Year, Computer Science and Engineering)</li>" +
-        "<li><b>Public Relations Head:</b> Ruparagunath G (Pre-Final Year, Artificial Intelligence and Data Science)</li>" +
-        "</ul>";
+      '<div class="table-responsive">' +
+      '<table class="table table-bordered table-striped align-middle">' +
+      '<thead class="table-dark"><tr><th>Position</th><th>Name</th><th>Year</th><th>Department</th></tr></thead>' +
+      '<tbody>' +
+      '<tr><td>Chairperson</td><td>Abinaya G</td><td>Final Year</td><td>Robotics and Automation</td></tr>' +
+      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Joint Secretary</td><td>Divya Prakash N S</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Subhi K</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Gopika B</td><td>Final Year</td><td>Automobile Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Kiruthika A</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '</tbody>' +
+      '</table>' +
+      '</div>';
+      
     this.classList.add("btn-active");
     document.getElementById("missionBtn").classList.remove("btn-active");
     document.getElementById("visionBtn").classList.remove("btn-active");
