--- a/index_gallery.html
+++ b/index_gallery.html
@@ -269,20 +269,20 @@ document.getElementById("visionBtn").addEventListener("click", function() {
 document.getElementById("teamBtn").addEventListener("click", function() {
     document.getElementById("aboutText").innerHTML = 
       '<div class="table-responsive">' +
-      '<table class="table table-bordered table-striped align-middle">' +
-      '<thead class="table-dark"><tr><th>Position</th><th>Name</th><th>Year</th><th>Department</th></tr></thead>' +
+      '<table class="table">' +
+      '<thead><tr><th>Position</th><th>Name</th><th>Year</th><th>Branch</th></tr></thead>' +
       '<tbody>' +
-      '<tr><td>Chairperson</td><td>Abinaya G</td><td>Final Year</td><td>Robotics and Automation</td></tr>' +
-      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
-      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Joint Secretary</td><td>Divya Prakash N S</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Subhi K</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Gopika B</td><td>Final Year</td><td>Automobile Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Kiruthika A</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '<tr><td>Chairperson</td><td>Abinaya G</td><td>4</td><td>Robotics and Automation</td></tr>' +
+      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Joint Secretary</td><td>DivyaPrakash N S</td><td>3</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Subhi K</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>3</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Gopika B</td><td>4</td><td>Automobile Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Kiruthika A</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>4r</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
       '</tbody>' +
       '</table>' +
       '</div>';
