--- a/index_gallery.html
+++ b/index_gallery.html
@@ -270,19 +270,19 @@ document.getElementById("teamBtn").addEventListener("click", function() {
     document.getElementById("aboutText").innerHTML = 
       '<div class="table-responsive">' +
       '<table class="table">' +
-      '<thead><tr><th>Position</th><th>Name</th><th>Year</th><th>Branch</th></tr></thead>' +
+      '<thead><tr><th>Position</th><th>Name</th><th>Year</th><th>Department</th></tr></thead>' +
       '<tbody>' +
-      '<tr><td>Chairperson</td><td>Abinaya G</td><td>4</td><td>Robotics and Automation</td></tr>' +
-      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
-      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Joint Secretary</td><td>DivyaPrakash N S</td><td>3</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Subhi K</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>3</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Gopika B</td><td>4</td><td>Automobile Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Kiruthika A</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>4r</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '<tr><td>Chairperson</td><td>Abinaya G</td><td>Final Year</td><td>Robotics and Automation</td></tr>' +
+      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Joint Secretary</td><td>Divya Prakash N S</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Subhi K</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Gopika B</td><td>Final Year</td><td>Automobile Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Kiruthika A</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
       '</tbody>' +
       '</table>' +
       '</div>';
@@ -291,6 +291,7 @@ document.getElementById("teamBtn").addEventListener("click", function() {
     document.getElementById("missionBtn").classList.remove("btn-active");
     document.getElementById("visionBtn").classList.remove("btn-active");
 });
+  
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
