--- a/index_gallery.html
+++ b/index_gallery.html
@@ -247,7 +247,12 @@
   document.getElementById("missionBtn").addEventListener("click", function() {
     document.getElementById("aboutText").innerHTML = 
         "<ul>" + 
-        "<li>The Quiz Club of MIT is a club dedicated to building a passionate quizzing community within MIT, encouraging exploration beyond academics, and enhancing critical thinking, communication, and teamwork through quizzes.</li>" + "<br>" +
+        "<li>Create a community of quizzers within MIT who are passionate about learning, sharing knowledge, and challenging themselves to be their best.</li>" + "<br>" +
+        "<li>Encourage members to explore a wide range of topics and subject areas beyond their academic curriculum.</li>" + "<br>" +
+        "<li>Provide a platform for students to develop their critical thinking, communication, and teamwork skills through quizzing.</li>" + "<br>" +
+        "<li>Organize events and competitions that foster healthy competition and collaboration among its members, as well as with other institutions.</li>" + "<br>" +
+        "<li>Participate in inter-collegiate events and showcase the talent of its members.</li>" + "<br>" +
+        "<li>Promote quizzing culture in educational institutions surrounding MIT by conducting myriad open quizzing events.</li>" + "<br>" +
         "<li>We organizes competitions that foster both collaboration and competition, represents MIT in inter-collegiate events, and expands the quizzing culture by conducting open events in educational institutions around MIT.</li>" + 
         "</ul>";
     this.classList.add("btn-active");
@@ -258,8 +263,7 @@
 document.getElementById("visionBtn").addEventListener("click", function() {
     document.getElementById("aboutText").innerHTML = 
         "<ul>" + 
-        "<li>The Quiz Club of MIT aims to foster a community of enthusiastic quizzers who enjoy challenging themselves through trivia and general knowledge-based competitions.</li>" + "<br>" +
-        "<li>Members engage in regular quizzing sessions, inter-collegiate events, develop critical thinking and teamwork skills. We strive to create an intellectually stimulating environment to nurtures curiosity and a thirst for knowledge.</li>" + 
+        "<li>The Quiz Club of MIT aims to foster a community of enthusiastic quizzers who enjoy challenging themselves through trivia and general knowledge-based competitions.Members engage in regular quizzing sessions, inter-collegiate events, develop critical thinking and teamwork skills. We strive to create an intellectually stimulating environment to nurtures curiosity and a thirst for knowledge.</li>" + 
         "</ul>";
     this.classList.add("btn-active");
     document.getElementById("missionBtn").classList.remove("btn-active");
@@ -270,19 +274,19 @@ document.getElementById("teamBtn").addEventListener("click", function() {
     document.getElementById("aboutText").innerHTML = 
       '<div class="table-responsive">' +
       '<table class="table">' +
-      '<thead><tr><th>Position</th><th>Name</th><th>Year</th><th>Department</th></tr></thead>' +
+      '<thead><tr><th>Position</th><th>Name</th><th>Year</th><th>Branch</th></tr></thead>' +
       '<tbody>' +
-      '<tr><td>Chairperson</td><td>Abinaya G</td><td>Final Year</td><td>Robotics and Automation</td></tr>' +
-      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
-      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Joint Secretary</td><td>Divya Prakash N S</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Subhi K</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>Pre-Final Year</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Gopika B</td><td>Final Year</td><td>Automobile Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Kiruthika A</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>Final Year</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>Pre-Final Year</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '<tr><td>Chairperson</td><td>Abinaya G</td><td>4</td><td>Robotics and Automation</td></tr>' +
+      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
+      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Joint Secretary</td><td>DivyaPrakash N S</td><td>3</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Subhi K</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>4</td><td>Aeronautical Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Gopika B</td><td>4</td><td>Automobile Engineering</td></tr>' +
+      '<tr><td>Design Head</td><td>Kiruthika A</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
+      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
       '</tbody>' +
       '</table>' +
       '</div>';
