--- a/index_gallery.html
+++ b/index_gallery.html
@@ -227,8 +227,8 @@
       </div>
       <div class="col-md-4 footer-section">
         <h4 class="footer-heading">Contact Us</h4>
-        <p class="footer-text"><i class="fas fa-phone footer-icon"></i> <a href="tel:+919361721146">+91 9940692756</a></p> 
-        <p class="footer-text"><i class="fas fa-phone footer-icon"></i> <a href="tel:+919361721146">+91 9043790738</a></p> 
+        <p class="footer-text"><i class="fas fa-phone footer-icon"></i> <a href="tel:+919361721146">+91 9940692756 (Staff-in-charge)</a></p> 
+        <p class="footer-text"><i class="fas fa-phone footer-icon"></i> <a href="tel:+919361721146">+91 9043790738 (Chairperson)</a></p> 
         <p class="footer-text"><i class="fas fa-envelope footer-icon"></i> <a href="mailto:qcmit.blitzkrieg@gmail.com ">qcmit.blitzkrieg@gmail.com</a></p>
         <p class="footer-text"><i class="fas fa-map-marker-alt footer-icon"></i> Chrompet, Chennai-600044</p>
     </div>
