--- a/index_gallery.html
+++ b/index_gallery.html
@@ -271,30 +271,111 @@ document.getElementById("visionBtn").addEventListener("click", function() {
 });
 
 document.getElementById("teamBtn").addEventListener("click", function() {
-    document.getElementById("aboutText").innerHTML = 
-      '<div class="table-responsive">' +
-      '<table class="table">' +
-      '<thead><tr><th>Position</th><th>Name</th><th>Year</th><th>Branch</th></tr></thead>' +
-      '<tbody>' +
-      '<tr><td>Chairperson</td><td>Abinaya G</td><td>4</td><td>Robotics and Automation</td></tr>' +
-      '<tr><td>Vice Chairperson</td><td>Albin Joseph Edwards G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
-      '<tr><td>Treasurer</td><td>Sindhuja S</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Joint Secretary</td><td>DivyaPrakash N S</td><td>3</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Subhi K</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Curation Head</td><td>Pradeesh Vel Nirmal V</td><td>4</td><td>Aeronautical Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Gopika B</td><td>4</td><td>Automobile Engineering</td></tr>' +
-      '<tr><td>Design Head</td><td>Kiruthika A</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Saravanan T S</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Media & Marketing Head</td><td>Mohana M</td><td>4</td><td>Computer Science and Engineering</td></tr>' +
-      '<tr><td>Public Relations Head</td><td>Ruparagunath G</td><td>3</td><td>Artificial Intelligence and Data Science</td></tr>' +
-      '</tbody>' +
-      '</table>' +
-      '</div>';
-      
-    this.classList.add("btn-active");
-    document.getElementById("missionBtn").classList.remove("btn-active");
-    document.getElementById("visionBtn").classList.remove("btn-active");
+  document.getElementById("aboutText").innerHTML = `
+    <div class="swiper myTeamSwiper">
+      <div class="swiper-wrapper">
+
+        <div class="swiper-slide team-card">
+          <h4>Chairperson</h4>
+          <p><b>Abinaya G</b></p>
+          <p>Final Year - Robotics and Automation</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Vice Chairperson</h4>
+          <p><b>Albin Joseph Edwards G</b></p>
+          <p>Pre-Final Year - Artificial Intelligence and Data Science</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Treasurer</h4>
+          <p><b>Sindhuja S</b></p>
+          <p>Final Year - Computer Science and Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Joint Secretary</h4>
+          <p><b>DivyaPrakash N S</b></p>
+          <p>Pre-Final Year - Aeronautical Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Curation Head</h4>
+          <p><b>Subhi K</b></p>
+          <p>Final Year - Computer Science and Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Curation Head</h4>
+          <p><b>Pradeesh Vel Nirmal V</b></p>
+          <p>Final Year - Aeronautical Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Design Head</h4>
+          <p><b>Gopika B</b></p>
+          <p>Final Year - Automobile Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Design Head</h4>
+          <p><b>Kiruthika A</b></p>
+          <p>Final Year - Computer Science and Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Media & Marketing Head</h4>
+          <p><b>Saravanan T S</b></p>
+          <p>Final Year - Computer Science and Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Media & Marketing Head</h4>
+          <p><b>Mohana M</b></p>
+          <p>Final Year - Computer Science and Engineering</p>
+        </div>
+
+        <div class="swiper-slide team-card">
+          <h4>Public Relations Head</h4>
+          <p><b>Ruparagunath G</b></p>
+          <p>Pre-Final Year - Artificial Intelligence and Data Science</p>
+        </div>
+
+      </div>
+      <!-- Swiper navigation -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
+    </div>
+  `;
+
+  // re-init Swiper after content is injected
+  new Swiper('.myTeamSwiper', {
+    slidesPerView: 3,
+    spaceBetween: 20,
+    loop: true,
+    autoplay: {
+      delay: 2500,
+    },
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+    pagination: {
+      el: '.swiper-pagination',
+      clickable: true,
+    },
+    breakpoints: {
+      768: { slidesPerView: 2 },
+      576: { slidesPerView: 1 },
+    }
+  });
+
+  this.classList.add("btn-active");
+  document.getElementById("missionBtn").classList.remove("btn-active");
+  document.getElementById("visionBtn").classList.remove("btn-active");
 });
+
   
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
