--- a/index_gallery.html
+++ b/index_gallery.html
@@ -275,6 +275,12 @@ document.getElementById("teamBtn").addEventListener("click", function() {
     <div class="swiper myTeamSwiper">
       <div class="swiper-wrapper">
 
+       <div class="swiper-slide team-card">
+          <h4>Staff-in-charge</h4>
+          <p><b>Dr. A R S Jayanth</b></p>
+          <p>Teaching Fellow, Department of Science and Humanities</p>
+        </div>
+
         <div class="swiper-slide team-card">
           <h4>Chairperson</h4>
           <p><b>Abinaya G</b></p>
